@@ -1,3 +1,7 @@
+2013-04-28  Xavier Perseguers  <xavier@causal.ch>
+
+	* [FEATURE] #47647: Colorize console output
+
 2013-04-27  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] #47655: Hide obsolete versions of Sphinx
